History
=======

Version 0.6.4 - Unreleased
--------------------------

- Fix #262612: The Reply-To field is not included as message header.

Version 0.6.3 - 2008-09-01
--------------------------

- Have the S&D SMTPMailer subclass from zope.sendmail's.  This allows
  the use of TLS with the standard configuration and fixes #263271.

Version 0.6.2 - 2008-08-28
--------------------------

- Updated docs with information on how to configure
  ``mail:queuedDelivery`` of ``zope.sendmail``. [nouri]

- Make the ``PloneCallHTMLFormatter`` which is the fallback formatter
  for all objects more robust. [tmog]

- Improve internationalization with newsletter object titles. [tmog]

- Fixed a bug in csv-export if you use more composer_data than just
  email address. [saily]

- Some people have reported that S&D is sending out duplicate mails on
  high-traffic newsletters.  I've added a ``StubSMTPMailer`` utility,
  which you can register conveniently in
  ``collective/dancing/mail.zcml``.  No mail will be sent out when
  it's configured instead of the default one.  This allows you to
  debug and fine-tune settings, e.g. those of your configured
  ``mail:queuedDelivery`` component. [nouri]

- Changed batch_size in browser/channel.py to 30 to stay at Plone's
  default. [saily]

- German translation updated. [saily]

- Rebuild of collective.dancing.pot using i18ndude. Some translation
  updates needed. [saily]

Version 0.6.1 - 2008-08-22
--------------------------

- On reinstall, advise QuickInstaller not to delete the five.intid
  tool that we set up during installation.  This fixes the brokenness
  of the subscription catalogs after a reinstall.  A typical error
  you'd see would look like::

    ...
     Module collective.singing.subscribe, line 227, in subscription_modified
     Module collective.singing.subscribe, line 214, in _catalog_subscription
     Module five.intid.intid, line 36, in getId
     Module zope.app.intid, line 86, in getId